--- a/Changes
+++ b/Changes
@@ -2,8 +2,10 @@ Revision history for Perl extension Variable::Expand::AnyLevel
 
 {{$NEXT}}
 
+        - fixed for removed '.' in @INC (https://github.com/tsucchi/p5-Variable-Expand-AnyLevel/issues/1)
+
 0.03 2015-11-23T02:40:59Z
-        - Mitrate to Minilla(Used toolchain and metadata are changed)
+        - Migrate to Minilla(Used toolchain and metadata are changed)
 
 0.02    2013/01/27
         - initial version in CPAN
