--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Variable::Expand::AnyLevel
 
 {{$NEXT}}
+        - fixed for removed '.' in @INC again (using FindBin)
 
 0.04 2017-05-21T12:31:00Z
 
